Dark Mode Fixed

--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 * {
   margin: 0;
   padding: 0;
-  color: var(--font-theme-color);
+  /* color: var(--font-theme-color); */
   text-decoration: none;
 }
 
 html {
-  /* scroll-behavior: smooth; */
+  scroll-behavior: smooth;
 }
 
 * {
@@ -62,6 +62,8 @@ a {
   --text-color: #12372a;
   --dark-text-color: #adbc9f;
   --border-color: var(--dark-bg);
+  --banner-bg: #436850;
+  --dark-banner-bg: #fbfada;
   --shadow: 4px -2px 40px 9px rgba(128, 128, 128, 0.628);
 }
 
@@ -141,10 +143,10 @@ header .header {
 }
 
 #darkMode:checked + .wrapper {
+  --banner-bg: var(--dark-banner-bg);
   --body-bg: var(--dark-bg);
   --text-color: var(--dark-text-color);
-  --border-color: var(--dark-border-color);
-  /* --dark-bg: var(--body-bg); */
+  --border-color: var(--dark-banner-bg);
 }
 
 /* <!-- hero --> */
@@ -180,7 +182,7 @@ header .header {
 .left button {
   background: var(--dark-bg);
   color: white;
-  border: none;
+  border: 1px solid --border-color);
   padding: 0.8rem 2rem;
   border-radius: 22px;
   cursor: pointer;
@@ -207,7 +209,7 @@ header .header {
 /* <!-- banner --> */
 .banner {
   margin-top: 7rem;
-  /* border: 2px solid var(--border-color); */
+  border: 2px solid var(--border-color);
   border-radius: 50px;
   justify-content: space-between;
   align-items: center;
@@ -222,16 +224,12 @@ header .header {
   letter-spacing: 2px;
 }
 
-.banner .info-content div p {
-  color: var(--dark-bg);
-}
-
 .banner .icon-container {
-  background: var(--dark-bg);
+  background: var(--banner-bg);
   width: 4rem;
   height: 4rem;
   border-radius: 50%;
-
+color: var(--body-bg);
   justify-content: center;
   align-items: center;
 }
